# scru

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: integration-tests.yml  on-main-push.yml  on-master-push.yml  on-pr-validation.yml  on-release-push.yml  on-tag-push.yml  pr-unit-tests.yml  pr-validation.yml  release.yml  reusable-build.yml  reusable-integration-tests.yml  reusable-release.yml  reusable-unit-tests.yml  unit-tests.yml
.opencode/commands/: implement-task.md  refine-task.md  review-fix-task.md  wrap-task.md
.opencode/skills/implement-task/: SKILL.md
.opencode/skills/refine-task/: SKILL.md
.opencode/skills/review-fix-task/: SKILL.md
.opencode/skills/wrap-task/: SKILL.md
spec/: 00_seed.md  01_spec.md  02_tasks.md
src/scru/: __init__.py  cli.py  cloudflare.py  config.py  constants.py  helpers.py  public_ip.py  run_mode.py  update.py  wizard.py
tasks/: 01-cli-skeleton.md  02-pr-unit-test-workflow.md  03-config-model-and-yaml-io.md  04-one-record-update-slice.md  05-fixed-source-support.md  05_1-integration-tests.md  06-public-source-support.md  07-custom-source-support.md  08-multi-record-and-multi-zone-execution.md  09-cloudflare-update-rules.md  10-config-wizard.md  11a-documentation.md  11b-release-ci-and-build.md  12-pre-release-code-fixes.md  13-changelog-and-linting.md  README.md
tests/: test_cli.py  test_config.py  test_custom_source.py  test_integration_support.py  test_public_ip.py  test_public_source.py  test_run_mode.py  test_update.py  test_wizard.py  test_workflow.py
tests/integration/: .env.example  conftest.py  support.py  test_custom.py  test_fixed.py  test_public.py  test_update_rules.py  test_wizard.py
tests/integration/cases/: 02-missing-record.yaml  (+7 more)
