[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scru"
version = "0.1.0"
description = "Simple Cloudflare Record Updater"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

[project.scripts]
scru = "scru.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
