[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scru"
version = "0.1.0"
description = "Simple Cloudflare Record Updater"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = ["PyYAML>=6.0"]

[project.optional-dependencies]
test = ["pytest>=8.0", "python-dotenv>=1.0"]

[project.scripts]
scru = "scru.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
console_output_style = "classic"
log_cli = true
log_cli_level = "INFO"
testpaths = ["tests"]
norecursedirs = ["integration"]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "C4"]
